# 2048

./: .gitignore  2048Game  2048game.c  2048gamecopy.c  CMakeLists.txt  Makefile  README.md
.gitignore/: tempCodeRunnerFile  tempCodeRunnerFile.c
color_number/: colorfulNumber
executable/: 2048Game
source/: 2048game  2048game.c  build.sh  clear.h  colorfulNumber.h  executable  input_ctrl.h
test/: testBoard  testBoard.c  testColorNumber  testColorNumber.c  testcolor  testcolor.c
tmp/: 2048game
twentyFour/: 2048game  2048game.c  colorfulNumber.h
twentyFour/test/: test.c  testBoard.c
